# JENChessEngine

./: .gitignore  Cargo.toml  LICENCE.txt  PerftPerformanceHistory  PerftPerformanceHistory.txt  README.md  UsefulInstructions.txt  build.rs  io_log.txt
.VSCodeCounter/2022-12-22_13-39-43/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cargo/: config.toml
cargo/: config.toml
src/: attack_tables.rs  attack_tables_ctg.rs  bit_board.rs  bitboard.rs  cmove.rs  constant_generation.rs  constants.rs  definitions.rs  evaluation.rs  game.rs  io.rs  key_constants.rs  lib.rs  main.rs  make_move.rs  make_unmake.rs  move_generator.rs  move_list.rs  perft.rs  position.rs  repetition_table.rs  search.rs  search_env.rs  searcher.rs  transposition_table.rs  utilities.rs
